--- a/src/components/Apresentation/Apresentation.scss
+++ b/src/components/Apresentation/Apresentation.scss
@@ -18,6 +18,12 @@
         height: 10rem;
         border-radius: 50%;
         background-color: purple;
+        overflow: hidden;
+        img{
+            width: 10rem;
+            
+        }
+
     }
 
     .containerTexts {
