--- a/src/components/Projetos/Projetos.scss
+++ b/src/components/Projetos/Projetos.scss
@@ -1,8 +1,33 @@
 @import '../fonts/font.scss';
 @import '../palletColor/palletColor.scss';
 
-.containerProjetosPrincipal{
+.containerProjetosPrincipal {
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 100vh;
+    height: 30rem;
     background-color: $primaryBlack;
+
+    p {
+        font-family: $font-body;
+        font-size: 35px;
+        font-weight: 900;
+        background: linear-gradient(200deg, rgba(255, 134, 96, 1) 0%, rgba(213, 73, 29, 1) 100%);
+        -webkit-background-clip: text;
+        background-clip: text;
+        color: transparent;
+
+    }
+
+    .containerGridProjetos {
+        width: 87%;
+        justify-items: center;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 2rem;
+    }
 }
