melhorado container projetos

--- a/src/components/Projetos/Projetos.scss
+++ b/src/components/Projetos/Projetos.scss
@@ -2,6 +2,7 @@
 @import '../palletColor/palletColor.scss';
 
 .containerProjetosPrincipal {
+    padding-top: 3rem;
     display: flex;
     gap: 1rem;
     flex-direction: column;
