--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -2,11 +2,13 @@
 @import '../palletColor/palletColor.scss';
 
 .containerHeaderPrincipal {
+    position: fixed;
     display: flex;
     align-items: center;
     width: 100%;
     height: 4.6rem;
     background-color: $secondaryBlack;
+    z-index: 100;
 
 
     .containerHeadeLeft {
@@ -27,19 +29,20 @@
         flex: 2;
 
 
-        ul {
+        .containerButtonsHeader {
             display: flex;
             justify-content: space-around;
-            padding: 0 12rem;
+            padding: 0 13rem;
 
-            li {
+            button {
                 font-family: $font-headings;
                 font-weight: 600;
                 color: $primaryWhite;
-                list-style: none;
                 font-size: 0.9rem;
                 cursor: pointer;
                 transition: 0.2s;
+                background-color: transparent;
+                border: none;
             }
         }
 
