--- a/src/components/cardProjeto/CardProjeto.scss
+++ b/src/components/cardProjeto/CardProjeto.scss
@@ -71,3 +71,11 @@
 
     }
 }
+
+@media (max-width: 768px) {
+    .containerCardProjetoC {
+        width: 22rem;
+        height: 15rem;
+    }
+
+}
