--- a/src/components/Apresentation/Apresentation.scss
+++ b/src/components/Apresentation/Apresentation.scss
@@ -142,6 +142,7 @@
 @media (max-width: 768px) {
     .containerApresentationPrincipal {
         gap: 3rem;
+        padding: 3rem 0rem;
 
         .containerTexts {
 
