--- a/src/components/Apresentation/Apresentation.scss
+++ b/src/components/Apresentation/Apresentation.scss
@@ -9,8 +9,8 @@
     flex-direction: column;
     align-items: center;
     color: white;
-    gap: 4rem;
-    padding: 8rem 0rem;
+    gap: 2rem;
+    padding: 6rem 0rem;
     background-color: $primaryBlack;
 
     .containerAvatar {
@@ -142,7 +142,7 @@
 @media (max-width: 768px) {
     .containerApresentationPrincipal {
         gap: 3rem;
-        padding: 3rem 0rem;
+        padding: 3rem 0rem 0 0;
 
         .containerTexts {
 
