--- a/src/components/Projetos/Projetos.scss
+++ b/src/components/Projetos/Projetos.scss
@@ -28,14 +28,29 @@
         justify-items: center;
         margin: 0 auto;
         display: grid;
-        grid-template-columns: repeat(1, 3fr);
+        grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
     }
 }
 
 @media (max-width: 768px) {
-    .containerProjetosPrincipal{
+    .containerProjetosPrincipal {
         height: 100%;
         padding-bottom: 3rem;
+
+        .containerGridProjetos {
+            grid-template-columns: repeat(1, 3fr);
+        }
+    }
+}
+
+@media (max-width: 430px) {
+    .containerProjetosPrincipal {
+        height: 100%;
+        padding-bottom: 3rem;
+
+        .containerGridProjetos {
+            grid-template-columns: repeat(1, 3fr);
+        }
     }
 }
