--- a/src/components/ExperienceCard/ExperienceCard.scss
+++ b/src/components/ExperienceCard/ExperienceCard.scss
@@ -7,8 +7,8 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    margin: 3rem 0 3rem 0rem;
-    
+    margin: 0rem 0 3rem 0rem;
+
 
     span {
         opacity: 60%;
@@ -49,6 +49,12 @@
 
                 img {
                     height: 60%;
+                    -webkit-user-select: none;
+                    -moz-user-select: none;
+                    -ms-user-select: none;
+                    user-select: none;
+                    pointer-events: none;
+
                 }
             }
         }
