--- a/src/components/Experience/Experience.scss
+++ b/src/components/Experience/Experience.scss
@@ -10,6 +10,7 @@
 
 
     p {
+        scroll-margin-top: 80px; 
         padding-bottom: 2rem;
         font-family: $font-body;
         font-size: 35px;
